8.mar (lv)
      - fix MusicXML import of beams
      - fix MusicXML regression test for beams
7.mar (lv)
      - fix #4324: MusicXML export of beam is incomplete
      (ws)
      - fix #4898: Up to empty lyric syllable crash
      - fix #4900: Transpose from C major to Cb major
      - fix #4899: Transpose by interval not working
      - fix #4881-2nd: Special Barlines not included in parts
      - fix #4798: note stems move to wrong position when adjusting beam height
      (db)
      - use Up and Down arrows to move through verses (like other scorewriters)
6.mar (ws)
      - fix #4866: Lasso select chordname, copy, crash
      - script plugin extension for cursor:
            rewind(1) positions to start of selection
            rewind(2) positions to end of selection
      - fix #4881: Special Barlines not included in parts
      - implement reapeat bar lines spanning more than 2 staves
      - fix #2855: Multi-measure rests hide special bar lines
5.mar (ws)
      - add Overture (*.ove) file format import from Van Ferry
4.mar (ws)
      - fix #2033: Dividing rests in 3/2 creates wrong rest values
      - fix #4696: Septuplet uses too many beams
      - fix #4695: dots collides with next note/rest
      - fix #4845: New score from templates crash
3.mar (ws)
      - fix #4837: Instrument short names disappear
      - fix undo crash
2.mar (db)
      - add zoom shortcuts
      - mark rare instruments for new score screen (instruments.xml locale)
28.feb (ws)
      - New attempt implementing "transpose by key": transpose interval is
        computed from target key -> first key (#2281)
      (db)
      - Add Russian and Romanian handbooks
27.feb (lv)
      - fix MusicXML import of beam over rest
       (ws)
      - fix regression: slurs in note entry mode
      - fix #4742: Undo slur lets handle on screen
      - implement two pass audio rendering to get max. output level
      - export sustain controller to midi
      - fix #4709: play panel preferences