@@ -112,29 +112,29 @@ static MidiInstrument minstr[] = {
       { 4, 0, 65, 7, 60, "PierceCl" },
 
 // Chromatic Perc
-      { 7, 0, 0, 8, 0, "Celesta" },
-      { 7, 0, 0, 9, 0, "Glockenspiel" },
-      { 7, 0, 0, 10, 0, "Music Box" },
+      { 7, 0,  0,  8, 0, "Celesta" },
+      { 7, 0,  0,  9, 0, "Glockenspiel" },
+      { 7, 0,  0, 10, 0, "Music Box" },
       { 4, 0, 64, 10, 0, "Orgel" },
-      { 7, 0, 0, 11, 0, "Vibraphone" },
-      { 4, 0, 1, 11, 0, "VibesK" },
+      { 7, 0,  0, 11, 0, "Vibraphone" },
+      { 4, 0,  1, 11, 0, "VibesK" },
       { 4, 0, 45, 11, 0, "HardVibe" },
-      { 7, 0, 0, 12, 0, "Marimba" },
-      { 4, 0, 1, 12, 0, "MarimbaK" },
+      { 7, 0,  0, 12, 0, "Marimba" },
+      { 4, 0,  1, 12, 0, "MarimbaK" },
       { 4, 0, 64, 12, 0, "SineMrmb" },
       { 4, 0, 96, 12, 0, "Balafon" },
       { 4, 0, 97, 12, 0, "Balafon2" },
       { 4, 0, 98, 12, 0, "LogDrum" },
-      { 7, 0, 0, 13, 0, "Xylophone" },
-      { 7, 0, 0, 14, 0, "Tubular Bells" },
+      { 7, 0,  0, 13, 0, "Xylophone" },
+      { 7, 0,  0, 14, 0, "Tubular Bells" },
       { 4, 0, 96, 14, 0, "ChrchBel" },
       { 4, 0, 97, 14, 0, "Carillon" },
-      { 7, 0, 0, 15, 0, "Dulcimer" },
+      { 7, 0,  0, 15, 0, "Dulcimer" },
       { 4, 0, 35, 15, 0, "Dulcimr2" },
       { 4, 0, 96, 15, 0, "Cimbalom" },
       { 4, 0, 97, 15, 0, "Santur" },
 // Organ
-      { 7, 0, 0, 16, 0, "Drawbar Organ" },
+      { 7, 0,  0, 16, 0, "Drawbar Organ" },
       { 4, 0, 32, 16, 0, "DelDrwOr" },
       { 4, 0, 33, 16, 0, "60sDrOr1" },
       { 4, 0, 34, 16, 0, "60sDrOr2" },
@@ -147,57 +147,57 @@ static MidiInstrument minstr[] = {
       { 4, 0, 65, 16, 0, "70sDrOr2" },
       { 4, 0, 66, 16, 0, "CheezOrg" },
       { 4, 0, 67, 16, 0, "DrawOrg3" },
-      { 7, 0, 0, 17, 0, "Perc. Organ" },
+      { 7, 0,  0, 17, 0, "Perc. Organ" },
       { 4, 0, 24, 17, 0, "70sPcOr1" },
       { 4, 0, 32, 17, 0, "DetPrcOr" },
       { 4, 0, 33, 17, 0, "LiteOrg" },
       { 4, 0, 37, 17, 0, "PercOrg2" },
-      { 7, 0, 0, 18, 0, "Rock Organ" },
+      { 7, 0,  0, 18, 0, "Rock Organ" },
       { 4, 0, 64, 18, 0, "RotaryOr" },
       { 4, 0, 65, 18, 0, "SloRotar" },
       { 4, 0, 66, 18, 0, "FstRotar" },
-      { 7, 0, 0, 19, 0, "Church Organ" },
+      { 7, 0,  0, 19, 0, "Church Organ" },
       { 4, 0, 32, 19, 0, "ChurOrg3" },
       { 4, 0, 35, 19, 0, "ChurOrg2" },
       { 4, 0, 40, 19, 0, "NotreDam" },
       { 4, 0, 64, 19, 0, "OrgFlute" },
       { 4, 0, 65, 19, 0, "TrmOrgFl" },
-      { 7, 0, 0, 20, 0, "Reed Organ" },
+      { 7, 0,  0, 20, 0, "Reed Organ" },
       { 4, 0, 40, 20, 0, "PuffOrg" },
-      { 7, 0, 0, 21, 0, "Akkordion" },
+      { 7, 0,  0, 21, 0, "Akkordion" },
       { 4, 0, 32, 21, 0, "Accordlt" },
-      { 7, 0, 0, 22, 0, "Harmonica" },
+      { 7, 0,  0, 22, 0, "Harmonica" },
       { 4, 0, 32, 22, 0, "Harmo2" },
-      { 7, 0, 0, 23, 0, "Bandoneon" },
+      { 7, 0,  0, 23, 0, "Bandoneon" },
       { 4, 0, 64, 23, 0, "TngoAcd2" },
 // Guitar
-      { 7, 0, 0, 24, 0, "Nylon Gtr." },
+      { 7, 0,  0, 24, 0, "Nylon Gtr." },
       { 4, 0, 16, 24, 0, "NylonGt2" },
       { 4, 0, 25, 24, 0, "NylonGt3" },
       { 4, 0, 43, 24, 0, "VelGtHrm" },
       { 4, 0, 96, 24, 0, "Ukelele" },
-      { 7, 0, 0, 25, 0, "Steel Gtr." },
+      { 7, 0,  0, 25, 0, "Steel Gtr." },
       { 4, 0, 16, 25, 0, "SteelGt2" },
       { 4, 0, 35, 25, 0, "12StrGtr" },
       { 4, 0, 40, 25, 0, "Nylon-Stl" },
       { 4, 0, 41, 25, 0, "Stl-Body" },
       { 4, 0, 96, 25, 0, "Mandolin" },
-      { 7, 0, 0, 26, 0, "Jazz Guitar" },
+      { 7, 0,  0, 26, 0, "Jazz Guitar" },
       { 4, 0, 18, 26, 0, "MelloGtr" },
       { 4, 0, 32, 26, 0, "JazzAmp" },
       { 4, 0, 96, 26, 0, "PdlSteel" },
-      { 7, 0, 0, 27, 0, "Clean Guitar" },
+      { 7, 0,  0, 27, 0, "Clean Guitar" },
       { 4, 0, 32, 27, 0, "ChorusGt" },
       { 4, 0, 64, 27, 0, "CleanGt2" },
-      { 7, 0, 0, 28, 0, "Muted Guitar" },
+      { 7, 0,  0, 28, 0, "Muted Guitar" },
       { 4, 0, 40, 28, 0, "FunkGtr1" },
       { 4, 0, 41, 28, 0, "MuteStlG" },
       { 4, 0, 43, 28, 0, "FunkGtr2" },
       { 4, 0, 45, 28, 0, "JazzMan" },
       { 4, 0, 96, 28, 0, "Mu.DstGt" },
-      { 7, 0, 0, 29, 0, "Overdrive Gtr" },
+      { 7, 0,  0, 29, 0, "Overdrive Gtr" },
       { 4, 0, 43, 29, 0, "Gt.Pinch" },
-      { 7, 0, 0, 30, 0, "DistortionGtr" },
+      { 7, 0,  0, 30, 0, "DistortionGtr" },
       { 4, 0, 12, 30, 0, "DstRthmG" },
       { 4, 0, 24, 30, 0, "DistGtr2" },
       { 4, 0, 35, 30, 0, "DistGtr3" },
@@ -208,15 +208,15 @@ static MidiInstrument minstr[] = {
       { 4, 0, 41, 30, 0, "FeedbGt2" },
       { 4, 0, 43, 30, 0, "RkRythm2" },
       { 4, 0, 45, 30, 0, "RockRthm" },
-      { 7, 0, 0, 31, 0, "Gtr.Harmonics" },
+      { 7, 0,  0, 31, 0, "Gtr.Harmonics" },
       { 4, 0, 65, 31, 0, "GtFeedbk" },
       { 4, 0, 66, 31, 0, "GtrHrmo2" },
       { 4, 0, 64, 31, 0, "AcoHarmo" },
 // Bass
-      { 7, 0, 0, 32, 0, "Acoustic Bass" },
+      { 7, 0,  0, 32, 0, "Acoustic Bass" },
       { 4, 0, 40, 32, 0, "JazzRthm" },
       { 4, 0, 45, 32, 0, "VXUprght" },
-      { 7, 0, 0, 33, 0, "Fingered Bass" },
+      { 7, 0,  0, 33, 0, "Fingered Bass" },
       { 4, 0, 18, 33, 0, "FingrDrk" },
       { 4, 0, 27, 33, 0, "FlangeBa" },
       { 4, 0, 40, 33, 0, "Ba-DstEG" },
@@ -224,20 +224,20 @@ static MidiInstrument minstr[] = {
       { 4, 0, 45, 33, 0, "FngBass2" },
       { 4, 0, 64, 33, 0, "JazzBass" },
       { 4, 0, 65, 33, 0, "ModAlem" },
-      { 7, 0, 0, 34, 0, "Picked Bass" },
+      { 7, 0,  0, 34, 0, "Picked Bass" },
       { 4, 0, 28, 34, 0, "MutePkBa" },
-      { 7, 0, 0, 35, 0, "Fretless Bass" },
+      { 7, 0,  0, 35, 0, "Fretless Bass" },
       { 4, 0, 32, 35, 0, "Fretles2" },
       { 4, 0, 33, 35, 0, "Fretles3" },
       { 4, 0, 34, 35, 0, "Fretles4" },
       { 4, 0, 96, 35, 0, "SynFretl" },
       { 4, 0, 97, 35, 0, "Smooth" },
-      { 7, 0, 0, 36, 0, "Slap Bass 1" },
+      { 7, 0,  0, 36, 0, "Slap Bass 1" },
       { 4, 0, 27, 36, 0, "ResoSlap" },
       { 4, 0, 32, 36, 0, "PunchThm" },
-      { 7, 0, 0, 37, 0, "Slap Bass 2" },
+      { 7, 0,  0, 37, 0, "Slap Bass 2" },
       { 4, 0, 43, 37, 0, "VeloSlap" },
-      { 7, 0, 0, 38, 0, "Synth Bass 1" },
+      { 7, 0,  0, 38, 0, "Synth Bass 1" },
       { 4, 0, 18, 38, 0, "SynBa1Dk" },
       { 4, 0, 20, 38, 0, "FastResB" },
       { 4, 0, 24, 38, 0, "AcidBass" },
@@ -247,8 +247,8 @@ static MidiInstrument minstr[] = {
       { 4, 0, 65, 38, 0, "SqrBass" },
       { 4, 0, 66, 38, 0, "RubberBa" },
       { 4, 0, 96, 38, 0, "Hammer" },
-      { 7, 0, 0, 39, 0, "Synth Bass 2" },
-      { 4, 0, 6, 39, 0, "MelloSB1" },
+      { 7, 0,  0, 39, 0, "Synth Bass 2" },
+      { 4, 0,  6, 39, 0, "MelloSB1" },
       { 4, 0, 12, 39, 0, "SeqBass" },
       { 4, 0, 18, 39, 0, "ClkSynBa" },
       { 4, 0, 19, 39, 0, "SynBa2Dk" },
@@ -257,84 +257,84 @@ static MidiInstrument minstr[] = {
       { 4, 0, 41, 39, 0, "DXBass" },
       { 4, 0, 64, 39, 0, "XWireBa" },
 // Strings/Orch
-      { 7, 0, 0, 40, 0, "Violin" },
-      { 4, 0, 8, 40, 0, "SlowVln" },
-      { 7, 0, 0, 41, 0, "Viola" },
-      { 7, 0, 0, 42, 0, "Cello" },
-      { 7, 0, 0, 43, 0, "Contrabass" },
-      { 7, 0, 0, 44, 0, "Tremolo Str." },
-      { 4, 0, 8, 44, 0, "SlowTrSt" },
+      { 7, 0,  0, 40, 0, "Violin" },
+      { 4, 0,  8, 40, 0, "SlowVln" },
+      { 7, 0,  0, 41, 0, "Viola" },
+      { 7, 0,  0, 42, 0, "Cello" },
+      { 7, 0,  0, 43, 0, "Contrabass" },
+      { 7, 0,  0, 44, 0, "Tremolo Str." },
+      { 4, 0,  8, 44, 0, "SlowTrSt" },
       { 4, 0, 40, 44, 0, "SuspStr" },
-      { 7, 0, 0, 45, 0, "PizzicatoStr." },
-      { 7, 0, 0, 46, 0, "Harp" },
+      { 7, 0,  0, 45, 0, "PizzicatoStr." },
+      { 7, 0,  0, 46, 0, "Harp" },
       { 4, 0, 40, 46, 0, "YangChin" },
-      { 7, 0, 0, 47, 0, "Timpani" },
+      { 7, 0,  0, 47, 0, "Timpani" },
 // Ensemble
-      { 7, 0, 0, 48, 0, "Strings 1" },
-      { 4, 0, 3, 48, 0, "S.Strngs" },
-      { 4, 0, 8, 48, 0, "SlowStr" },
+      { 7, 0,  0, 48, 0, "Strings 1" },
+      { 4, 0,  3, 48, 0, "S.Strngs" },
+      { 4, 0,  8, 48, 0, "SlowStr" },
       { 4, 0, 24, 48, 0, "ArcoStr" },
       { 4, 0, 35, 48, 0, "60sStrng" },
       { 4, 0, 40, 48, 0, "Orchestr" },
       { 4, 0, 41, 48, 0, "Orchstr2" },
       { 4, 0, 42, 48, 0, "TremOrch" },
       { 4, 0, 45, 48, 0, "VeloStr" },
-      { 7, 0, 0, 49, 0, "Strings 2" },
-      { 4, 0, 3, 49, 0, "S.SlwStr" },
-      { 4, 0, 8, 49, 0, "LegatoSt" },
+      { 7, 0,  0, 49, 0, "Strings 2" },
+      { 4, 0,  3, 49, 0, "S.SlwStr" },
+      { 4, 0,  8, 49, 0, "LegatoSt" },
       { 4, 0, 40, 49, 0, "WarmStr" },
       { 4, 0, 41, 49, 0, "Kingdom" },
       { 4, 0, 64, 49, 0, "70sStr" },
       { 4, 0, 65, 49, 0, "StrEns3" },
-      { 7, 0, 0, 50, 0, "Syn.Strings 1" },
+      { 7, 0,  0, 50, 0, "Syn.Strings 1" },
       { 4, 0, 27, 50, 0, "ResoStr" },
       { 4, 0, 64, 50, 0, "SynStr4" },
       { 4, 0, 65, 50, 0, "SSStr" },
       { 4, 0, 35, 50, 0, "SynStr3" },
-      { 7, 0, 0, 51, 0, "Syn.Strings 2" },
-      { 7, 0, 0, 52, 0, "Choir Aahs" },
-      { 4, 0, 3, 52, 0, "S.Choir" },
+      { 7, 0,  0, 51, 0, "Syn.Strings 2" },
+      { 7, 0,  0, 52, 0, "Choir Aahs" },
+      { 4, 0,  3, 52, 0, "S.Choir" },
       { 4, 0, 16, 52, 0, "Ch.Aahs2" },
       { 4, 0, 32, 52, 0, "MelChoir" },
       { 4, 0, 40, 52, 0, "ChoirStr" },
       { 4, 0, 64, 52, 0, "StrngAah" },
       { 4, 0, 65, 52, 0, "MaleAah" },
-      { 7, 0, 0, 53, 0, "Voice Oohs" },
+      { 7, 0,  0, 53, 0, "Voice Oohs" },
       { 4, 0, 64, 53, 0, "VoiceDoo" },
       { 4, 0, 96, 53, 0, "VoiceHmn" },
-      { 7, 0, 0, 54, 0, "Synth Voice" },
+      { 7, 0,  0, 54, 0, "Synth Voice" },
       { 4, 0, 40, 54, 0, "SynVox2" },
       { 4, 0, 41, 54, 0, "Choral" },
       { 4, 0, 64, 54, 0, "AnaVoice" },
-      { 7, 0, 0, 55, 0, "Orchestra Hit" },
+      { 7, 0,  0, 55, 0, "Orchestra Hit" },
       { 4, 0, 35, 55, 0, "OrchHit2" },
       { 4, 0, 64, 55, 0, "Impact" },
       { 4, 0, 66, 55, 0, "DoublHit" },
       { 4, 0, 67, 55, 0, "BrStab80" },
 // Brass
-      { 7, 0, 0, 56, 0, "Trumpet" },
+      { 7, 0,  0, 56, 0, "Trumpet" },
       { 4, 0, 16, 56, 0, "Trumpet2" },
       { 4, 0, 17, 56, 0, "BriteTrp" },
       { 4, 0, 32, 56, 0, "WarmTrp" },
       { 4, 0, 96, 56, 0, "FluglHrn" },
-      { 7, 0, 0, 57, 0, "Trombone" },
+      { 7, 0,  0, 57, 0, "Trombone" },
       { 4, 0, 18, 57, 0, "Trmbone2" },
-      { 7, 0, 0, 58, 0, "Tuba" },
+      { 7, 0,  0, 58, 0, "Tuba" },
       { 4, 0, 16, 58, 0, "Tuba2" },
-      { 7, 0, 0, 59, 0, "Muted Trumpet" },
+      { 7, 0,  0, 59, 0, "Muted Trumpet" },
       { 4, 2, 64, 59, 0, "MuteTrp2" },
-      { 7, 0, 0, 60, 0, "French Horn" },
-      { 4, 0, 6, 60, 0, "FrHrSolo" },
+      { 7, 0,  0, 60, 0, "French Horn" },
+      { 4, 0,  6, 60, 0, "FrHrSolo" },
       { 4, 0, 32, 60, 0, "FrHorn2" },
       { 4, 0, 37, 60, 0, "HornOrch" },
-      { 7, 0, 0, 61, 0, "Brass Section" },
+      { 7, 0,  0, 61, 0, "Brass Section" },
       { 4, 0, 35, 61, 0, "Tp-TbSec" },
       { 4, 0, 40, 61, 0, "BrssSec2" },
       { 4, 0, 41, 61, 0, "HiBrass" },
       { 4, 0, 42, 61, 0, "MelloBrs" },
       { 4, 0, 14, 61, 0, "SfrzndBr" },
       { 4, 0, 39, 61, 0, "BrssFall" },
-      { 7, 0, 0, 62, 0, "Synth Brass 1" },
+      { 7, 0,  0, 62, 0, "Synth Brass 1" },
       { 4, 0, 12, 62, 0, "QuackBr" },
       { 4, 0, 20, 62, 0, "RezSynBr" },
       { 4, 0, 24, 62, 0, "PolyBrss" },
@@ -342,38 +342,38 @@ static MidiInstrument minstr[] = {
       { 4, 0, 32, 62, 0, "JumpBrss" },
       { 4, 0, 45, 62, 0, "AnaVelBr" },
       { 4, 0, 64, 62, 0, "AnaBrss1" },
-      { 7, 0, 0, 63, 0, "Synth Brass 2" },
+      { 7, 0,  0, 63, 0, "Synth Brass 2" },
       { 4, 0, 18, 63, 0, "SoftBrs" },
       { 4, 0, 40, 63, 0, "SynBras4" },
       { 4, 0, 41, 63, 0, "ChoBrss" },
       { 4, 0, 45, 63, 0, "VelBras2" },
       { 4, 0, 64, 63, 0, "AnaBras2" },
 // Reed
-      { 7, 0, 0, 64, 0, "Soprano Sax" },
-      { 7, 0, 0, 65, 0, "Alto Sax" },
+      { 7, 0,  0, 64, 0, "Soprano Sax" },
+      { 7, 0,  0, 65, 0, "Alto Sax" },
       { 4, 0, 40, 65, 0, "SaxSect" },
       { 4, 0, 43, 65, 0, "HyprAlto" },
-      { 7, 0, 0, 66, 0, "Tenor Sax" },
+      { 7, 0,  0, 66, 0, "Tenor Sax" },
       { 4, 0, 40, 66, 0, "BrthTnSx" },
       { 4, 0, 41, 66, 0, "SoftTenr" },
       { 4, 0, 64, 66, 0, "TnrSax2" },
-      { 7, 0, 0, 67, 0, "Baritone Sax" },
-      { 7, 0, 0, 68, 0, "Oboe" },
-      { 7, 0, 0, 69, 0, "English Horn" },
-      { 7, 0, 0, 70, 0, "Bassoon" },
-      { 7, 0, 0, 71, 0, "Clarinet" },
+      { 7, 0,  0, 67, 0, "Baritone Sax" },
+      { 7, 0,  0, 68, 0, "Oboe" },
+      { 7, 0,  0, 69, 0, "English Horn" },
+      { 7, 0,  0, 70, 0, "Bassoon" },
+      { 7, 0,  0, 71, 0, "Clarinet" },
       { 4, 0, 96, 71, 0, "BassClar" },
 // Pipe
-      { 7, 0, 0, 72, 0, "Piccolo" },
-      { 7, 0, 0, 73, 0, "Flute" },
-      { 7, 0, 0, 74, 0, "Recorder" },
-      { 7, 0, 0, 75, 0, "Pan Flute" },
+      { 7, 0,  0, 72, 0, "Piccolo" },
+      { 7, 0,  0, 73, 0, "Flute" },
+      { 7, 0,  0, 74, 0, "Recorder" },
+      { 7, 0,  0, 75, 0, "Pan Flute" },
       { 4, 0, 64, 75, 0, "PanFlut2" },
       { 4, 0, 96, 75, 0, "Kawala" },
-      { 7, 0, 0, 76, 0, "Blown Bottle" },
-      { 7, 0, 0, 77, 0, "Shakuhachi" },
-      { 7, 0, 0, 78, 0, "Whistle" },
-      { 7, 0, 0, 79, 0, "Ocarina" },
+      { 7, 0,  0, 76, 0, "Blown Bottle" },
+      { 7, 0,  0, 77, 0, "Shakuhachi" },
+      { 7, 0,  0, 78, 0, "Whistle" },
+      { 7, 0,  0, 79, 0, "Ocarina" },
 // SynthLead
       { 7, 0, 0, 80, 0, "Square Wave" },
       { 4, 0, 6, 80, 0, "Square2" },
@@ -1007,9 +1007,9 @@ void Score::convertMidi(MidiFile* mf)
                   convertTrack(track);
 
             foreach (Event* e, track->events()) {
-              if (e->type() == ME_META && e->metaType()==META_LYRIC)
-                 mf->processMeta(this, track, e);
-              }
+                  if (e->type() == ME_META && e->metaType()==META_LYRIC)
+                        mf->processMeta(this, track, e);
+                  }
             }
 
       for (AL::iSigEvent is = sigmap()->begin(); is != sigmap()->end(); ++is) {
